# aeg

./: .dockerignore  .env.example  .gitignore  COGNEE_NOTES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aeg/: antibodies.py  cognee_client.py  config.py  detection.py  gateway.py  health.py  mcp_server.py  ontology.py  response.py  screening.py  trust.py
dashboard/: index.html
demo/: run_demo.py  seed.py  serve_dashboard.py
demo/poison/: injected_memory.json  malicious_doc.md
scripts/: graph_only_proof.py  verify_access_control.py  verify_cognee_api.py  verify_phase3_probes.py  verify_phase6_multiuser.py  verify_phase6_truth.py
site/: how.html  index.html  proof.html
site/assets/: brand.css
tests/: conftest.py  test_access_control_llm.py  test_antibodies.py  test_antibodies_llm.py  test_dashboard.py  test_detection.py  test_detection_llm.py  test_features.py  test_gateway.py  test_health.py  test_ontology.py  test_phase6.py  test_response.py  test_response_llm.py  test_roundtrip.py  test_screening.py  test_security.py
