[project]
name = "aeg"
version = "0.1.0"
description = "Aeg — a memory immune system for AI agents, built on Cognee"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cognee[fastembed]==1.2.2",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.28",        # MCP server calls the gateway app in-process (ASGITransport)
    "mcp>=1.2",           # Model Context Protocol server surface (aeg-mcp)
]

[project.scripts]
aeg-mcp = "aeg.mcp_server:main"

[project.optional-dependencies]
# Phase-6 Postgres profile (AEG_PROFILE=postgres). Not installed by default —
# `uv sync --extra postgres` + `docker compose up -d` to use it. Uses the
# binary psycopg2 (no native libpq/pg_config build needed).
postgres = ["cognee[postgres-binary]==1.2.2"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aeg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One event loop for the whole session: cognee caches a graph engine whose
# aiohttp session is bound to the loop that created it, so per-test loops break
# cross-test recall/export. Session scope keeps that cached engine valid.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "llm: makes real LLM/embedding API calls (deselect with -m 'not llm')",
]
